Menu--avance menu con su extención

--- a/index.html
+++ b/index.html
@@ -45,31 +45,33 @@
 </head>
 <body id="inicio">
   <!--Barra de Navegación-->
-  <nav class="menuNavegacionVertical">
-    <div class="menuNavegacion__home"><a href="index.html"><i class="icon-a icono--menu"></i></a></div>
-    <div class="menuNavegacionVertical__items">
-      <ul class="menuNavegacionVertical--ul">
-        <li><a href="#"><i class="icon-a icono--menu"></i></a></li>
-        <li><a href="#"><i class="icon-a icono--menu"></i></a></li>
-        <li><a href="#"><i class="icon-a icono--menu"></i></a></li>
-        <li><a href="#"><i class="icon-a icono--menu"></i></a></li>
+  <nav class="menuNavegacion">
+    <div class="menuNavegacion__home"><a href="index.html"><i class="icon-info icono--menu"></i></a></div>
+    <div class="menuNavegacion__items">
+      <ul class="menuNavegacion--ul">
+        <li><a href="#"><i class="icon-descubre icono--menu"></i></a></li>
+        <li><a href="#"><i class="icon-explora icono--menu"></i></a></li>
+        <li><a href="#"><i class="icon-comunica icono--menu"></i></a></li>
+        <li><a href="#"><i class="icon-beta icono--menu"></i></a></li>
         <li><a href="#"><i class="icon-a icono--menu"></i></a></li>
       </ul>
     </div>
-    <div class="menuNavegacionVertical__alfa"><a href="agora_LandingPage.html"><i class="icon-alfa icono--menu"></i></a></div>
+    <div class="menuNavegacion__botonMenu">
+      <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div>
+    </div>
   </nav>
-  <nav class="menuNavegacionApaisado">
-    <div><i class="icon-a"></i></div>
-    <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div>
-  </nav>
-  <nav class="menuOverlay">
-    <ul>
-      <li><a type="button" href="">Buscar</a></li>
-      <li><a type="button" href="">Filtro</a></li>
-      <li><a type="button" href="">Biblioteca</a></li>
-      <li><a type="button" href="agora_LandingPage.html">Fase Alfa</a></li>
-    </ul>
-  </nav>
+  <div class="menuNavegacion__Extendida">
+    <div class="menuNavegacion__home"><a href="index.html"><i class="icon-info icono--menu"></i></a></div>
+    <div class="menuNavegacion__items">
+      <ul class="menuNavegacion--ul">
+        <li><a href="#"><i class="icon-descubre icono--menu">Buscar</i></a></li>
+        <li><a href="#"><i class="icon-explora icono--menu">Filtro</i></a></li>
+        <li><a href="#"><i class="icon-comunica icono--menu">Biblioteca</i></a></li>
+        <li><a href="#"><i class="icon-beta icono--menu">Fase Alfa</i></a></li>
+      </ul>
+    </div>
+    <div class="menuNavegacionVertical__Terminos"><a href="agora_LandingPage.html">Términos & Condiciones</a></div>
+  </div>
   <!--Modal 	-->
   <!--Banner y Modal Subir Tu Evento-->
   <div class="displayNone" id="modal__enviaTuEvento">
