MENU-- menu con target

--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
     <div class="menuNavegacion__home"><a href="index.html"><i class="icon-info icono--menu"></i></a></div>
     <div class="menuNavegacion__items">
       <p class="menuNavegacion--logo">ágora</p>
-      <ul class="menuNavegacion--ul"></ul>
+      <ul class="menuNavegacion--ul">
+        <div class="wrapper"><a href="#nav" aria-label="Open Navigation">x</a></div>
+      </ul>
     </div>
-    <div class="menuNavegacion__botonMenu">
-      <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div>
-    </div>
+    <div class="menuNavegacion__botonMenu"><a href="#nav" aria-label="Open Navigation">
+        <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div></a></div>
   </nav>
-  <div class="menuNavegacion__Extendida--Vertical"></div>
+  <div id="nav">
+    <ul>
+      <li><a href=""></a></li>
+    </ul>
+  </div>
   <!--Back--><a class="back flexRow" href="#inicio"><i class="icon-back icono--menu"></i></a>
   <!--Contenedor Tarjetas-->
   <div class="contenedorTarjetasEventos">
