copia de drive a github

--- a/index.html
+++ b/index.html
@@ -66,11 +66,12 @@
       <!--Tarjeta-->
       <div class="tarjeta">
         <div class="tarjeta__contenedor">
-          <p class="fechaEvento">7 Jul 2017 </p><img class="imagenEvento imagen-fluida" src="images/2.jpg"/>
-          <p class="nombreEvento">Programa Nacional de Teatro Escolar Veracruz 2017</p>
-          <p class="descripcionEvento">Descripción</p>
+          <p class="fechaEvento">7 Jul 2017 </p>
+          <div class="iconoTipo--tarjeta cultural" title="Teatro"><i class="icon-info"></i></div>
+          <p class="nombreEvento cultural">Programa Nacional de Teatro Escolar Veracruz 2017</p>
           <p class="sedeEvento">ágora de la Ciudad</p>
           <div class="organizadorEvento">Instituto Veracruzano de Cultura | IVEC</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
         </div>
       </div>
     </div>
