avance del formato inicio

--- a/index.html
+++ b/index.html
@@ -62,16 +62,156 @@
   <!--Back--><a class="back flexRow" href="#inicio"><i class="icon-back icono--menu"></i></a>
   <!--Contenedor Tarjetas-->
   <div class="contenedorTarjetasEventos">
+    <p class="fechaColumnaTarjetas">15 de Septiembre 2017</p>
     <div class="columnaTarjetas">
       <!--Tarjeta-->
       <div class="tarjeta">
         <div class="tarjeta__contenedor">
-          <p class="fechaEvento">7 Jul 2017 </p>
-          <div class="iconoTipo--tarjeta cultural" title="Teatro"><i class="icon-info"></i></div>
-          <p class="nombreEvento cultural">Programa Nacional de Teatro Escolar Veracruz 2017</p>
+          <p class="fechaEvento">7 Jul 2017</p>
+          <div class="iconoTipo--tarjeta" title="Teatro"><i class="icon-info"></i></div><img class="imagenEvento imagen-fluida" src="images/2.jpg"/>
+          <p class="nombreEvento">Programa Nacional de Teatro Escolar Veracruz 2017</p>
           <p class="sedeEvento">ágora de la Ciudad</p>
           <div class="organizadorEvento">Instituto Veracruzano de Cultura | IVEC</div>
           <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <!--eventos de relleno-->
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">4 octubre 2016 &middot; 16:00	</p>
+          <div class="iconoTipo--tarjeta" title="Visita Guiada"></div>
+          <p class="nombreEvento">Fotografía y Literatura: De la Imagen a la Escritura	</p>
+          <p class="sedeEvento">Ágora de la Ciudad	</p>
+          <div class="organizadorEvento">Ágora de la Ciudad</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">11 octubre 2016 &middot; 16:00	</p>
+          <div class="iconoTipo--tarjeta" title="Visita Guiada"></div>
+          <p class="nombreEvento">Fotografía y Literatura: De la Imagen a la Escritura	</p>
+          <p class="sedeEvento">Ágora de la Ciudad	</p>
+          <div class="organizadorEvento">Ágora de la Ciudad</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">18 octubre 2016 &middot; 16:00	</p>
+          <div class="iconoTipo--tarjeta" title="Visita Guiada"></div>
+          <p class="nombreEvento">Fotografía y Literatura: De la Imagen a la Escritura	</p>
+          <p class="sedeEvento">Ágora de la Ciudad	</p>
+          <div class="organizadorEvento">Ágora de la Ciudad</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">5 octubre 2016 &middot; 19:00	</p>
+          <div class="iconoTipo--tarjeta" title="Concierto"></div>
+          <p class="nombreEvento">Mi Casio, Mi Ciudad	</p>
+          <p class="sedeEvento">Casino Xalapeño	</p>
+          <div class="organizadorEvento">Universidad Veracruzana</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">28 octubre 2016 &middot; 18:00	</p>
+          <div class="iconoTipo--tarjeta" title="Convocatoria"></div>
+          <p class="nombreEvento">1er Gran Desfile y Concurso de Catrinas</p>
+          <p class="sedeEvento">Panteón 5 de Febrero - Parque Juárez	</p>
+          <div class="organizadorEvento">H. Ayuntamiento de Xalapa</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">1 octubre 2016 &middot; 12:00	</p>
+          <div class="iconoTipo--tarjeta" title="Ciclo de Cine"></div>
+          <p class="nombreEvento">Matiné Infantil. Ciclo Hayao Miyasaki</p>
+          <p class="sedeEvento">Galería de Arte Contemporáneo de Xalapa | Auditorio	</p>
+          <div class="organizadorEvento">Galería de Arte Contemporáneo de Xalapa</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">8 octubre 2016 &middot; 12:00	</p>
+          <div class="iconoTipo--tarjeta" title="Ciclo de Cine"></div>
+          <p class="nombreEvento">Matiné Infantil. Ciclo Hayao Miyasaki</p>
+          <p class="sedeEvento">Galería de Arte Contemporáneo de Xalapa | Auditorio	</p>
+          <div class="organizadorEvento">Galería de Arte Contemporáneo de Xalapa</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">15 octubre 2016 &middot; 12:00	</p>
+          <div class="iconoTipo--tarjeta" title="Ciclo de Cine"></div>
+          <p class="nombreEvento">Matiné Infantil. Ciclo Hayao Miyasaki</p>
+          <p class="sedeEvento">Galería de Arte Contemporáneo de Xalapa | Auditorio	</p>
+          <div class="organizadorEvento">Galería de Arte Contemporáneo de Xalapa</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">22 octubre 2016 &middot; 12:00	</p>
+          <div class="iconoTipo--tarjeta" title="Ciclo de Cine"></div>
+          <p class="nombreEvento">Matiné Infantil. Ciclo Hayao Miyasaki</p>
+          <p class="sedeEvento">Galería de Arte Contemporáneo de Xalapa | Auditorio	</p>
+          <div class="organizadorEvento">Galería de Arte Contemporáneo de Xalapa</div>
+          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">13 octubre 2016 &middot; 20:30	</p>
+          <div class="iconoTipo--tarjeta" title="Teatro"></div>
+          <p class="nombreEvento">Muestra Estatal de Teatro Indígena	</p>
+          <p class="sedeEvento">Sala Dagoberto Guillaumin, Teatro del Estado</p>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">13 octubre 2016 &middot; 19:30	</p>
+          <div class="iconoTipo--tarjeta" title="Teatro"></div>
+          <p class="nombreEvento">Muestra Estatal de Teatro Indígena	</p>
+          <p class="sedeEvento">Sala Dagoberto Guillaumin, Teatro del Estado</p>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">14 octubre 2016 &middot; 20:30	</p>
+          <div class="iconoTipo--tarjeta" title="Teatro"></div>
+          <p class="nombreEvento">Muestra Estatal de Teatro Indígena	</p>
+          <p class="sedeEvento">Sala Dagoberto Guillaumin, Teatro del Estado</p>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">14 octubre 2016 &middot; 19:30	</p>
+          <div class="iconoTipo--tarjeta" title="Teatro"></div>
+          <p class="nombreEvento">Muestra Estatal de Teatro Indígena	</p>
+          <p class="sedeEvento">Sala Dagoberto Guillaumin, Teatro del Estado</p>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">14 octubre 2016 &middot; 19:00	</p>
+          <div class="iconoTipo--tarjeta" title="Teatro"></div>
+          <p class="nombreEvento">Muestra Estatal de Teatro Indígena	</p>
+          <p class="sedeEvento">Sala Dagoberto Guillaumin, Teatro del Estado</p>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <p class="fechaEvento">26 septiembre 2016		</p>
+          <div class="iconoTipo--tarjeta" title="Convocatoria"></div>
+          <p class="nombreEvento">LUNETA	</p>
+          <p class="sedeEvento">Ágora de la Ciudad</p>
         </div>
       </div>
     </div>
