Menu---se dio estilo al menu y los link + iconos

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 <body id="inicio">
   <!--Barra de Navegación-->
   <nav class="menuNavegacion">
-    <div class="menuNavegacion__home"><a href="index.html"><i class="icon-info icono--menu"></i></a></div>
-    <p class="menuNavegacion--logo">ágora</p><i class="item__buscar icon-info"></i><i class="item__filtrar icon-info"></i><i class="item__historial icon-info"></i><i class="item__crear icon-info"></i>
+    <div class="menuNavegacion__home"><a href="index.html"><i class="icon-info icono--menu"></i></a></div><a class="menuNavegacion--logo" href="">
+      <p>ágora</p></a><a class="item__buscar" href=""><i class="icon-info"></i></a><a class="item__filtrar" href=""><i class="icon-info"></i></a><a class="item__historial" href=""><i class="icon-info"></i></a><a class="item__crear" href=""><i class="icon-info"></i></a>
     <div class="menuNavegacion__botonMenu"><a href="#nav" aria-label="Open Navigation">
         <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div></a></div>
   </nav>
   <div class="menuNavegacion__Extendida" id="nav">
-    <div class="menuNavExtendida__logo">ágora</div>
-    <div class="itemNavExtendida__buscar"> <i class="iconNavExtendida icon-info"></i><a href="">Buscar</a></div>
-    <div class="itemNavExtendida__filtrar"> <i class="iconNavExtendida icon-info"></i><a href="">Filtrar</a></div>
-    <div class="itemNavExtendida__historial"> <i class="iconNavExtendida icon-info"></i><a href="">Historial</a></div>
-    <div class="itemNavExtendida__crear"> <i class="iconNavExtendida icon-info"></i><a href="">Crear</a></div>
-    <div class="menuNavExtendida--faseBeta">Fase Beta</div>
+    <div class="menuNavExtendida__logo">ágora</div><a class="itemNavExtendida__buscar" href=""><i class="iconNavExtendida icon-info"></i>
+      <p>Buscar</p></a><a class="itemNavExtendida__filtrar" href=""><i class="iconNavExtendida icon-info"></i>
+      <p>Filtrar</p></a><a class="itemNavExtendida__historial" href=""><i class="iconNavExtendida icon-info"></i>
+      <p>Historial</p></a><a class="itemNavExtendida__crear" href=""><i class="iconNavExtendida icon-info"></i>
+      <p>Crear</p></a>
+    <div class="menuNavExtendida--faseBeta"><i class="iconNavExtendida icon-info"></i><a href="">Fase Beta</a></div>
   </div>
   <!--Back--><a class="back flexRow" href="#inicio"><i class="icon-back icono--menu"></i></a>
   <!--Contenedor Tarjetas-->
