Menu--Se modifico el menu, eliminacion de iconos, color de type y cambio de logo

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 <body id="inicio">
   <!--Barra de Navegación-->
   <nav class="menuNavegacion">
-    <div class="menuNavegacion__home"><a href="index.html"><i class="icon-a-logo icono--menu"></i></a></div><a class="menuNavegacion--logo" href=""><img class="imagen-fluida" src="images/agora_logo_anaranjado.svg"/></a><a class="item__buscar" href=""><i class="icon-info icono--menu"></i></a><a class="item__filtrar" href=""><i class="icon-info icono--menu"></i></a><a class="item__historial" href=""><i class="icon-info icono--menu"></i></a><a class="item__crear" href=""><i class="icon-info icono--menu"></i></a>
+    <div class="menuNavegacion__home"><a href="index.html"><i class="icon-a-logo icono--menu"></i></a></div><a class="item__buscar" href=""><i class="icon-info icono--menu"></i></a><a class="item__filtrar" href=""><i class="icon-info icono--menu"></i></a><a class="item__historial" href=""><i class="icon-info icono--menu"></i></a><a class="item__crear" href=""><i class="icon-info icono--menu"></i></a>
     <div class="menuNavegacion__botonMenu"><a href="#nav" aria-label="Open Navigation">
         <div class="botonMenu" id="botonMenu"> <span class="top"></span><span class="middle"></span><span class="bottom"></span></div></a></div>
   </nav>
   <div class="menuNavegacion__Extendida" id="nav">
-    <div class="menuNavExtendida__logo"><img class="imagen-fluida" src="images/agora_logo.svg"/></div><a class="itemNavExtendida__buscar" href=""><i class="iconNavExtendida icon-info"></i>
-      <p>Buscar</p></a><a class="itemNavExtendida__filtrar" href=""><i class="iconNavExtendida icon-info"></i>
-      <p>Filtrar</p></a><a class="itemNavExtendida__historial" href=""><i class="iconNavExtendida icon-info"></i>
-      <p>Historial</p></a><a class="itemNavExtendida__crear" href=""><i class="iconNavExtendida icon-info"></i>
+    <div class="menuNavExtendida__logo"><img class="imagen-fluida" src="images/agora_logo.svg"/></div><a class="itemNavExtendida__buscar" href="">
+      <p>Buscar</p></a><a class="itemNavExtendida__filtrar" href="">
+      <p>Filtrar</p></a><a class="itemNavExtendida__historial" href="">
+      <p>Historial</p></a><a class="itemNavExtendida__crear" href="">
       <p>Crear</p></a>
     <div class="linea"></div>
     <div class="menuNavExtendida--faseBeta"><i class="iconNavExtendida icon-info"></i><a href="">Fase Beta</a></div>
