Tarjeta--se modifico el codigo de las tarjetas, su maquetación de grid a flexbox

--- a/index.html
+++ b/index.html
@@ -67,12 +67,16 @@
       <!--Tarjeta-->
       <div class="tarjeta">
         <div class="tarjeta__contenedor">
-          <p class="fechaEvento">7 Jul 2017</p>
-          <div class="iconoTipo--tarjeta" title="Teatro"><i class="icon-info"></i></div><img class="imagenEvento imagen-fluida" src="images/2.jpg"/>
+          <div class="header__tarjeta">
+            <p class="fechaEvento">7 Jul 2017</p>
+            <div class="iconoTipo--tarjeta" title="Teatro"><i class="icon-info"></i></div>
+          </div><img class="imagenEvento imagen-fluida" src="images/2.jpg"/>
           <p class="nombreEvento">Programa Nacional de Teatro Escolar Veracruz 2017</p>
           <p class="sedeEvento">ágora de la Ciudad</p>
-          <div class="organizadorEvento">Instituto Veracruzano de Cultura | IVEC</div>
-          <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+          <div class="footer__tarjeta">
+            <div class="organizadorEvento">Instituto Veracruzano de Cultura | IVEC</div>
+            <div class="iconoRedes--tarjeta"><i class="icon-facebook"></i></div>
+          </div>
         </div>
       </div>
       <!--eventos de relleno-->
