--- a/landingPage.html
+++ b/landingPage.html
@@ -33,7 +33,7 @@
   <!--Icono Pestaña-->
   <link rel="icon" type="image/png" href="images/icon.png"/>
   <!--Icon Font-->
-  <link href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet"/>
+  <link href="font/styles.css" rel="stylesheet"/>
   <!--Roboto Font-->
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet"/>
   <!--Normalize-->
@@ -106,7 +106,7 @@
     <div class="portada__imagen"><img class="imagen-fluida" src="images/agora_logo_blanco.svg"/></div>
     <h1 class="portada__titulo">Descubre. Comunica tu Evento</h1>
     <div class="portada__texto"> 
-      <p>Encuentra el próximo concierto cerca de ti o los horarios de la obra a la que deseas asistir; </p>crea el espacio para el evento que organizas y has que todos lo vean.
+      <p>Encuentra el próximo concierto cerca de ti o los horarios de la obra a la que deseas asistir; crea el espacio para el evento que organizas y has que todos lo vean.</p>
     </div>
     <div class="portada__linea">
       <div></div>
